# arkham-errata-platform

./: .gitignore
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260426_add_cancel_errata_action.py  20260426_cancel_action.py  20260426_errata_workbench.py  20260426_publish_sessions.py  20260427_user_note.py  b8888de7362f_初始化数据库模型.py
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  cards.py  errata.py  errata_drafts.py  mapping.py  packages.py  publish.py  review.py
backend/app/models/: __init__.py  card.py  errata.py  errata_draft.py  user.py
backend/app/schemas/: card.py  errata.py  errata_draft.py  publish.py  user.py
backend/app/services/: card_database_publisher.py  data_repo_sync.py  errata_drafts.py  image_cache.py  local_card_index.py  mapping_index.py  publish_directory_presets.py  publish_package_builder.py  publish_sessions.py  renderer.py  scanner.py  (+6 more)
backend/scripts/: bootstrap_back_overrides_from_chinese.py  import_mapping_index.py  summarize_mapping_diff.py
backend/tests/: conftest.py  test_auth.py  test_card_database_publisher.py  test_data_repo_sync.py  test_errata_drafts.py  test_image_cache.py  test_mapping_index.py  test_models.py  test_models_errata_workbench.py  test_packages.py  test_publish_directory_presets.py  test_publish_exports.py  test_publish_package_builder.py  test_publish_sessions.py  test_renderer.py  test_review_fixes.py  test_roles_and_users.py  test_scanner.py  test_sheet_generator.py  test_tts_object_walker.py  test_tts_parser.py  test_uploader.py
(+51 files in other folders)
